<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News aggregator</string>
    <string name="apply">Apply</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="russian">Russian</string>
    <string name="settings">Settings</string>
    <string name="system">System</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="news_feed">News Feed</string>
    <string name="news_api_key">7d3c565382e446afbd4c1441349a1672</string>
</resources>